--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -6,6 +6,7 @@
     <string name="calc_active_insulin">Berechnung des aktiven Insulins</string>
     <string name="clean">Aufräumen</string>
     <string name="erase_data">Daten löschen</string>
+    <string name="store_data">Daten archivieren</string>
     <string name="calc">Berechnung</string>
     <string name="units">Einheiten: </string>
     <string name="duration_minutes">Dauer (Min): </string>
@@ -43,7 +44,9 @@
     <string name="yes">Ja</string>
     <string name="no">Nicht</string>
     <string name="delete_all_inactive_insulin_confirmation">Möchten Sie alle eingegebenen inaktiven Insuline löschen?</string>
-    <string name="delete_all_stores_inactive_insulin_confirmation">Es werden viele inaktive Insuline gespeichert. Möchten Sie sie löschen, um die Anwendung zu beschleunigen?</string>
+    <string name="store_all_inactive_insulin_confirmation">Möchten Sie alle eingegebenen inaktiven Insuline archivieren?</string>
+    <string name="delete_all_stores_inactive_insulin_confirmation">Es gibt viele inaktive Insuline. Möchten Sie sie löschen, um die Anwendung zu beschleunigen?</string>
+    <string name="store_all_stores_inactive_insulin_confirmation">Es gibt viele inaktive Insuline. Möchten Sie sie archivieren, um die Anwendung zu beschleunigen?</string>
     <string name="insulin_active_data">Angewandte Insulindaten</string>
     <string name="select_insuline"><font size="15">Wählen Sie ein Insulin aus</font></string>
     <string name="units_applied">Angewandte Einheiten: </string>
@@ -93,11 +96,11 @@
     <string name="color_inactive">#ff0000</string>
     <string name="backup_file">Daten in Datei kopieren</string>
     <string name="backup_file_name">AI_Backup.txt</string>
-    <string name="backup_success">"Erfolgreiche Datensicherung ins Archiv:  "</string>
+    <string name="backup_success">Erfolgreiche Datensicherung ins Archiv:  </string>
     <string name="backup_fail_permission">Datensicherung konnte nicht erstellt werden. Überprüfen Sie die Anwendungsberechtigungen.</string>
     <string name="backup_fail_space_or_permission">Die Sicherung konnte nicht erstellt werden. Stellen Sie sicher, dass Sie über Speicherplatz auf dem Gerät und / oder Anwendungsberechtigungen verfügen.</string>
-    <string name="backup_file_headers">Insulin;Labor;Einheiten;Dauer;Bewerbungszeit;Beschreibung;</string>
-    <string name="backup_path">\"Ein Backup von inaktiven Insulinen wird gespeichert in \"</string>
+    <string name="backup_file_headers">Insulin;Labor;Einheiten;Dauer;Bewerbungszeit;Beschreibung;Anwendungsmodus;</string>
+    <string name="backup_path">Ein Backup von inaktiven Insulinen wird gespeichert in \</string>
     <string name="dose_in">Dosieren:</string>
     <string name="carbs_grams">Gr. KH:</string>
     <string name="grams">Gramm:</string>
@@ -128,5 +131,8 @@
     <string name="to_hour">Bis:</string>
     <string name="ratio_range_hours">Intervallverhältnis</string>
     <string name="invalid_range">Ungültiges Zeitintervall.</string>
+    <string name="application">Anwendung: </string>
+    <string name="manual">von Hand</string>
+    <string name="pump">Infusor</string>
 
 </resources>
